add github action build script

--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "melange-parcel-benchmark",
   "version": "1.0.0",
   "description": "A benchmarking application for bucklescript",
-  "main": "index.js",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf .parcel-cache dist && esy bsb -make-world",
+    "build": "rm -rf .parcel-cache dist && npm run pack && parcel build src/index.html --public-url ./",
+    "build-dev": "rm -rf .parcel-cache dist && esy bsb -make-world",
     "re:watch": "esy bsb -make-world -w",
     "re:clean": "esy bsb -clean-world",
     "dev": "parcel src/index.html",
     "postinstall": "esy",
     "pack": "esbuild _build/default/src/Index.bs.js --bundle --outfile=src/index.js",
-    "start": "npm run build && npm run pack && npm run dev",
+    "start": "npm run build-dev && npm run pack && npm run dev",
     "deploy": "yarn build && gh-pages -d dist"
   },
   "author": "John",
